kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
     app: postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        app: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: labo
        - name: POSTGRES_PASSWORD
          value: student_password
        - name: POSTGRES_USER
          value: student_user
        image: postgres:12.1-alpine
        name: postgres
        ports:
          - containerPort: 5432
        resources: {}
      restartPolicy: Always
status: {}
