kubernetes/webapp-deployment-v110.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
    version: v110
  name: webappv110
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      version: v110
  strategy: {}
  template:
    metadata:
      labels:
        app: webapp
        version: v110
    spec:
      serviceAccountName: webapp
      containers:
      - args:
        - uwsgi
        - --ini
        - app.ini
        image: vanherpedries/webapp:1.10
        name: webappv110
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
