kubernetes/webapp-deployment-v120.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
    version: v120
  name: webappv120
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      version: v120
  strategy: {}
  template:
    metadata:
      labels:
        app: webapp
        version: v120
    spec:
      serviceAccountName: webapp
      containers:
      - args:
        - uwsgi
        - --ini
        - app.ini
        image: vanherpedries/webapp:1.20
        name: webappv120
        ports:
        - containerPort: 5000

        resources: {}
      restartPolicy: Always
