kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports: 
    - name: "tcp-5432"
      port: 5432
      
  selector:
    app: postgres
status:
  loadBalancer: {}
