kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  ports:
    - port: 5000
  selector:
    app: webapp
status:
  loadBalancer: {}
