kubernetes/dest-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webapp
spec:
  host: webapp
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v109
    labels:
      version: v109
  - name: v110
    labels:
      version: v110
  - name: v120
    labels:
      version: v120
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: postgres
spec:
  host: postgres
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: postgres
---
