kubernetes/nginx-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "*" 
  gateways:
  - webapp-gateway 
  http:
  - match:
    - port: 15029
    route:
    - destination:
        port:
          number: 80 # can be omitted if it's the only port for reviews
        host: nginx
