kubernetes/webapp-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp-vs
spec:
  hosts:
  - webapp
  tcp:
  - route:
    - destination:
        host: webapp
        subset: v120
        port: 
          number: 5000
      weight: 24
    - destination: 
        host: webapp
        subset: v110
        port: 
          number: 5000
      weight: 75
    - destination: 
        host: webapp
        subset: v109
        port: 
          number: 5000
      weight: 1
