kubernetes/authpol-webapp.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: webapp
spec:
 selector:
   matchLabels:
     app: webapp
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/basic-webapp/sa/nginx"]
   to: 
   - operation:
       ports: ["5000"]
